// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object encoding returns the internal encoding for the Redis object 1`] = `"embstr"`;

exports[`object encoding returns the internal encoding for the Redis object 2`] = `"int"`;

exports[`object encoding returns the internal encoding for the Redis object 3`] = `"quicklist"`;

exports[`object encoding returns the internal encoding for the Redis object 4`] = `"intset"`;

exports[`object encoding returns the internal encoding for the Redis object 5`] = `"hashtable"`;

exports[`object encoding returns the internal encoding for the Redis object 6`] = `"listpack"`;

exports[`object encoding returns the internal encoding for the Redis object 7`] = `"listpack"`;

exports[`object encoding should throw on wrong number of arguments 1`] = `"ERR wrong number of arguments for 'object|encoding' command"`;

exports[`object encoding should throw on wrong number of arguments 2`] = `"ERR wrong number of arguments for 'object|encoding' command"`;

exports[`object should throw on unknown subcommand 1`] = `"ERR unknown subcommand 'foobar'. Try OBJECT HELP."`;

exports[`objectBuffer encoding returns the internal encoding for the Redis object 1`] = `
Object {
  "data": Array [
    101,
    109,
    98,
    115,
    116,
    114,
  ],
  "type": "Buffer",
}
`;

exports[`objectBuffer encoding returns the internal encoding for the Redis object 2`] = `
Object {
  "data": Array [
    105,
    110,
    116,
  ],
  "type": "Buffer",
}
`;

exports[`objectBuffer encoding returns the internal encoding for the Redis object 3`] = `
Object {
  "data": Array [
    113,
    117,
    105,
    99,
    107,
    108,
    105,
    115,
    116,
  ],
  "type": "Buffer",
}
`;

exports[`objectBuffer encoding returns the internal encoding for the Redis object 4`] = `
Object {
  "data": Array [
    105,
    110,
    116,
    115,
    101,
    116,
  ],
  "type": "Buffer",
}
`;

exports[`objectBuffer encoding returns the internal encoding for the Redis object 5`] = `
Object {
  "data": Array [
    104,
    97,
    115,
    104,
    116,
    97,
    98,
    108,
    101,
  ],
  "type": "Buffer",
}
`;

exports[`objectBuffer encoding returns the internal encoding for the Redis object 6`] = `
Object {
  "data": Array [
    108,
    105,
    115,
    116,
    112,
    97,
    99,
    107,
  ],
  "type": "Buffer",
}
`;

exports[`objectBuffer encoding returns the internal encoding for the Redis object 7`] = `
Object {
  "data": Array [
    108,
    105,
    115,
    116,
    112,
    97,
    99,
    107,
  ],
  "type": "Buffer",
}
`;

exports[`objectBuffer encoding should throw on wrong number of arguments 1`] = `"ERR wrong number of arguments for 'object|encoding' command"`;

exports[`objectBuffer encoding should throw on wrong number of arguments 2`] = `"ERR wrong number of arguments for 'object|encoding' command"`;

exports[`objectBuffer should throw on unknown subcommand 1`] = `"ERR unknown subcommand 'foobar'. Try OBJECT HELP."`;
